# team-higgs

./: .gitignore  BOOTSTRAP.md  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: codebase-health.md  em.md  implementer-backend.md  implementer-devops.md  implementer-frontend.md  implementer-ml.md  reviewer-security.md  tech-writer.md
.github/workflows/: command-center-ci.yml  terraform.yml
agents/templates/: implementer-template.md  reviewer-template.md
command_center/: main.py
db/: schema.sql
docs/: changelog.md  stack-backend.md  stack-devops.md
docs/design/: command-center-v1.html
docs/prd/: command-center.md  emctl.md  observability.md  token-accounting.md
docs/reference/: emctl.md
emctl/: __init__.py  __main__.py  alembic_cfg.py  cli.py  config.py  db.py  enums.py  errors.py  output.py
emctl/commands/: __init__.py  _shared.py  artifact.py  debt.py  decision.py  learning.py  metric.py  migrate.py  pr.py  project.py  question.py  retro.py  review.py  risk.py  run.py  status.py  task.py
emctl/migrations/: env.py
emctl/migrations/versions/: 0001_initial_v1_schema.py  0002_report_ro_role.py  0003_observability_v2.py  0004_token_accounting.py
emctl/repo/: __init__.py  _sql.py  artifacts.py  debt.py  decisions.py  learnings.py  metrics.py  projects.py  prs.py  questions.py  retros.py  reviews.py  risks.py  runs.py  status.py  task_events.py  tasks.py
infra/: .gitignore  .terraform.lock.hcl  README.md  artifact_registry.tf  backend.hcl.example  cc-phase3-state-migration.md  ci.auto.tfvars  ci_iam.tf  cloud_run.tf  command_center.tf  command_center_ar.tf  command_center_lb.tf  dns-cutover.md  dns.tf  domain.tf  higgs_command.tf  iam.tf  outputs.tf  providers.tf  secrets.tf  sql.tf  terraform-ci.md  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
tests/: conftest.py  test_agent_token_split.py  test_debt.py  test_decisions.py  test_domains.py  test_errors.py  test_metrics.py  test_migrate.py  test_observability_metrics.py  test_output.py  test_pr_review.py  test_projects.py  test_risks.py  test_runs.py  test_status.py  test_task_events.py  test_tasks.py
tests/command_center/: test_security_headers.py
tests/fixtures/: transcript_clean.jsonl  transcript_messy.jsonl
tools/: agent_token_split.py
