[project]
name = "emctl"
version = "0.1.0"
description = "Platform state CLI for the agent engineering team."
requires-python = ">=3.12"
dependencies = [
    # typer floor is 0.16: earlier typer pins click<8.2, which strands click
    # on 8.1.x below the PYSEC-2026-2132 fix (8.3.3). typer 0.16+ lifts that cap.
    # Ceiling is <0.26: typer 0.26 changed exception handling so a raised
    # click.ClickException no longer exits with its custom `exit_code` (our typed
    # errors in emctl/errors.py rely on that). Adapting to 0.26+ is a follow-up.
    "typer>=0.16,<0.26",
    # click is imported directly (emctl/errors.py). Floor is the PYSEC-2026-2132
    # fix; declaring it here pins the fix rather than trusting transitive luck.
    "click>=8.3.3,<9",
    "psycopg[binary]>=3.2,<4",
    # Alembic drives migrations; it depends on SQLAlchemy, which env.py uses
    # directly to build a psycopg3 engine for the `migrate` command.
    "alembic>=1.13,<2",
    "sqlalchemy>=2.0,<3",
]

[project.scripts]
emctl = "emctl.cli:app"

[project.optional-dependencies]
# The command-center web service (task #27). Kept out of the base install so
# emctl (the CLI) never pulls FastAPI; the service reuses emctl's data layer.
web = [
    # fastapi floor is 0.135: earlier fastapi caps starlette <0.47, stranding it
    # on 0.46.2 below the starlette CVE fixes. fastapi 0.135+ drops that upper
    # bound, letting starlette resolve to a fixed (>=1.3.1) release.
    "fastapi>=0.135,<0.140",
    # starlette is imported directly (command_center/main.py). Floor is 1.3.1,
    # the release that clears all of PYSEC-2026-161/248/249/1941/1942/2280/2281.
    "starlette>=1.3.1,<2",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "itsdangerous>=2.2",
]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["emctl*", "command_center*"]

[tool.setuptools.package-data]
emctl = ["migrations/*.py", "migrations/versions/*.py", "migrations/*.mako"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# UP042: keep `(str, Enum)` mixin enums — Typer renders their choices as the
# bare value; migrating to enum.StrEnum is a deferred cosmetic change.
ignore = ["UP042"]

[tool.ruff.lint.per-file-ignores]
# typer.Option/Argument in argument defaults is the framework's idiom.
"emctl/commands/*" = ["B008"]
# FastAPI's Depends()/Query() in argument defaults is the framework's idiom.
"command_center/*" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
# The command-center service uses Pydantic v2 models; the plugin teaches mypy
# how BaseSettings/BaseModel construct (env-driven, defaulted fields optional).
plugins = ["pydantic.mypy"]
# Third-party packages without bundled type info.
[[tool.mypy.overrides]]
module = ["alembic.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
